--- a/src/app/banderas/banderas.component.html
+++ b/src/app/banderas/banderas.component.html
@@ -1,9 +1,9 @@
 <div class="col" style="text-align: center;">
 
     <h1 class="display-1">Banderas</h1>
-    <img src="{{datos.flags.png}}" style="max-width:100%;width:auto;height:auto;" ><br><br><br>
+    <img src="{{ datos?.flags.png }}" style="max-width:100%;width:auto;height:auto;" ><br><br><br>
 
     <h1 class="display-1">Escudo</h1>
-    <img src="{{datos.coatOfArms.png}}" style="max-width:100%;width:auto;height:auto;">
+    <img src="{{ datos?.coatOfArms.png }}" style="max-width:100%;width:auto;height:auto;">
     
 </div>
