--- a/src/app/generales/generales.component.html
+++ b/src/app/generales/generales.component.html
@@ -1,6 +1,7 @@
 <div class="container">
 
-    <p>Nombre: {{datos.name.common}} </p>
+    <p>Nombre: {{datos?.name.common}} </p>
 
     <p *ngFor="let moneda of monedas">Moneda: {{moneda.name}} </p>
+    <p *ngFor="let moneda of monedas">Simbolo: {{moneda.symbol}} </p>
 </div>
