--- a/src/app/geograficos/geograficos.component.html
+++ b/src/app/geograficos/geograficos.component.html
@@ -1,8 +1,8 @@
-<div>
+<div class="container">
 
-    <h1>{{datos.name.common}}</h1>
-    <p>Region: {{datos.region}}</p>
-    <p>Area: {{datos.area}}</p>
-    <p>Comienzo de semana: {{datos.startOfWeek}} </p>
+    <h1>{{datos?.name.common}}</h1>
+    <p>Region: {{datos?.region}}</p>
+    <p>Area: {{datos?.area}}</p>
+    <p>Comienzo de semana: {{datos?.startOfWeek}} </p>
 
 </div>
