--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
+body{
+    background: linear-gradient(135deg, rgb(255, 255, 255), rgb(195, 250, 216));
+}
