--- a/src/app/cuentas/cuentas.component.html
+++ b/src/app/cuentas/cuentas.component.html
@@ -1,4 +1,5 @@
 <ul>
+    <li><h1>Cuentas:</h1></li>
     <li><button (click)="elegirCuenta(0)">Cuenta de Ahorros</button> {{ccc[0]}} <h4>saldo: 3400€</h4></li>
     <li><button (click)="elegirCuenta(1)">Cuenta Nómina</button> {{ccc[1]}} <h4>saldo: 1200€</h4></li>
 </ul>
