--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,6 @@
 <div class="navbar">
     <nav>
+        <a routerLink="detallescuenta/">Detalles de la Cuenta</a>
         <a routerLink="movimientos/">Movimientos</a>
         <a routerLink="operar/">Operar</a>
         <a routerLink="productos/">Mis productos</a>
