--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,43 +1,51 @@
 <header class="bg-primary">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-      <div class="container-fluid">
-          <a class="navbar-brand mt-2 mt-lg-0" href="#">
-              <h5 class="pt-1">TIENDA</h5>
-          </a>
+    <div class="container-fluid">
+      <a class="navbar-brand mt-2 mt-lg-0" href="#">
+        <h5 class="pt-1">TIENDA</h5>
+      </a>
 
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item"><a class="nav-link" href="#">Inicio</a></li>
-                  <li class="nav-item"><a class="nav-link" href="#">Productos</a></li>
-                  <li class="nav-item"><a class="nav-link" href="#">OFERTA</a></li>
-              </ul>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item"><a class="nav-link" href="#">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Productos</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">OFERTA</a></li>
+        </ul>
 
-              <div class="d-flex align-items-center justify-content-start">
-                  <a class="login" href="#">Login</a>
-                  <span id="login">
-                      <form class="navbar-form navbar-left">
-                          <div class="form-group">
-                              <li><input type="email" class="form-control login-username" placeholder="Usuario"></li>
-                              <li><input type="password" class="form-control login-password" placeholder="Contaseña"></li>
-                          </div>
-                          <button type="submit" class="btn btn-default btn-xs">Inicia sessión</button>
-                      </form>
-                  </span>
+        <div class="navbar-nav action-buttons ml-auto">
+          <a href="#" data-toggle="dropdown" class="nav-item nav-link dropdown-toggle mr-3">Login</a>
+          <div class="dropdown-menu login-form">
+            <form action="/examples/actions/confirmation.php" method="post">
+              <div class="form-group">
+                <label>Username</label>
+                <input type="text" class="form-control" required="required">
               </div>
+              <div class="form-group">
+                <div class="clearfix">
+                  <label>Password</label>
+                  <a href="#" class="float-right text-muted"><small>Forgot?</small></a>
+                </div>
+                <input type="password" class="form-control" required="required">
+              </div>
+              <input type="submit" class="btn btn-primary btn-block" value="Login">
+            </form>
           </div>
+          <!--<a href="#" class="btn btn-primary">Get Started</a>-->
+        </div>
       </div>
+    </div>
   </nav>
 </header>
 
 <main>
   <article>
-      <div style="height: 300px;">
-      </div>
+    <div style="height: 300px;">
+    </div>
   </article>
 </main>
 
 <footer class="bg-primary text-center text-white fixed-bottom">
   <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-      <p class="copyright" class="mt-2">&copy; 2023 Por Talento Digital Fundación ONCE.</p>
+    <p class="copyright" class="mt-2">&copy; 2023 Por Talento Digital Fundación ONCE.</p>
   </div>
 </footer>
