--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,24 +13,24 @@
         </ul>
 
         <div class="navbar-nav action-buttons ml-auto">
-          <a href="#" data-toggle="dropdown" class="nav-item nav-link dropdown-toggle mr-3">Login</a>
+          <a href="#" data-toggle="dropdown" class="nav-item nav-link dropdown-toggle mr-3">Acceso</a>
           <div class="dropdown-menu login-form">
-            <form action="/examples/actions/confirmation.php" method="post">
+            <form action="" method="post">
               <div class="form-group">
-                <label>Username</label>
+                <label>Usuario</label>
                 <input type="text" class="form-control" required="required">
               </div>
               <div class="form-group">
                 <div class="clearfix">
-                  <label>Password</label>
-                  <a href="#" class="float-right text-muted"><small>Forgot?</small></a>
+                  <label>Contraseña</label>
+                  <!--<a href="#" class="float-right text-muted"><small>Olvidó?</small></a>-->
                 </div>
                 <input type="password" class="form-control" required="required">
               </div>
               <input type="submit" class="btn btn-primary btn-block" value="Login">
             </form>
           </div>
-          <!--<a href="#" class="btn btn-primary">Get Started</a>-->
+          <a href="#" class="btn btn-primary">Registrate</a>
         </div>
       </div>
     </div>
