--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,36 +1,23 @@
 <header class="bg-primary">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
-      <a class="navbar-brand mt-2 mt-lg-0" href="#">
+      <a class="navbar-brand mt-2 mt-lg-0" href="index.html">
         <h5 class="pt-1">TIENDA</h5>
       </a>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link" href="#">Inicio</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Productos</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">OFERTA</a></li>
+          <li class="nav-item"><a class="nav-link" ng-href="">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link" ng-href="">Productos</a></li>
+          <li class="nav-item"><a class="nav-link" ng-href="">OFERTA</a></li>
         </ul>
 
         <div class="navbar-nav action-buttons ml-auto">
-          <a href="#" data-toggle="dropdown" class="nav-item nav-link dropdown-toggle mr-3">Acceso</a>
-          <div class="dropdown-menu login-form">
-            <form action="" method="post">
-              <div class="form-group">
-                <label>Usuario</label>
-                <input type="text" class="form-control" required="required">
-              </div>
-              <div class="form-group">
-                <div class="clearfix">
-                  <label>Contraseña</label>
-                  <!--<a href="#" class="float-right text-muted"><small>Olvidó?</small></a>-->
-                </div>
-                <input type="password" class="form-control" required="required">
-              </div>
-              <input type="submit" class="btn btn-primary btn-block" value="Login">
-            </form>
-          </div>
-          <a href="#" class="btn btn-primary">Registrate</a>
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item"><a ng-href="/login" class="btn p-2 btn-primary border-0">Acceso</a></li>
+            <li class="nav-item">&nbsp;</li>
+            <li class="nav-item"><a ng-href="/register" class="btn p-2 btn-primary border-0">Registrate</a></li>
+          </ul>
         </div>
       </div>
     </div>
