--- a/src/app/detalles-cuenta/detalles-cuenta.component.html
+++ b/src/app/detalles-cuenta/detalles-cuenta.component.html
@@ -1,8 +1,13 @@
 <ul>
-    <h3>
+    <h1>Detalles de la Cuenta</h1>
         <li>Titular: Paco</li>
         <li>Tipo cuenta: Black</li>
         <li>Saldo: 6500</li>
+        <li>Productos asociados:</li>
+        <ol>
+            <li><a href=""> Tarjeta de Crédito</a></li>
+            <li><a href=""> Hipoteca Verde</a></li>
+        </ol>
         <li>Limite de crédito: 3000</li>
-    </h3>
+        <li><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores architecto minus commodi! Adipisci, quidem ullam. Inventore iste voluptatibus tempore numquam, fugiat cupiditate tenetur sunt recusandae a quia soluta aspernatur nulla?</p></li>
 </ul>
