--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,3 +8,4 @@
         <button *ngIf="logado" (click)="deslogarse()">Salir</button>
     </div>
 </div>
+<app-navbar *ngIf="cuentaElegida"></app-navbar>
