--- a/src/app/movimientos/movimientos.component.html
+++ b/src/app/movimientos/movimientos.component.html
@@ -1,6 +1,19 @@
 <ul>
-    <li>Ingreso paguita +400</li>
-    <li>Adeudo Luz/Gas -200</li>
-    <li>Multa por tu bien -600</li>
-    <li>Bizum de mi primo +800</li>
+    <h1>Movimientos</h1>
+    <li>Ingreso paguita --------------------------  +400</li>
+    <li>Adeudo Luz/Gas -------------------------  -200</li>
+    <li>Multa por tu bien -------------------------  -600</li>
+    <li>Bizum de mi primo -------------------------  +800</li>
+    <li>Ingreso paguita --------------------------  +400</li>
+    <li>Adeudo Luz/Gas -------------------------  -200</li>
+    <li>Multa por tu bien -------------------------  -600</li>
+    <li>Bizum de mi primo -------------------------  +800</li>
+    <li>Ingreso paguita --------------------------  +400</li>
+    <li>Adeudo Luz/Gas -------------------------  -200</li>
+    <li>Multa por tu bien -------------------------  -600</li>
+    <li>Bizum de mi primo -------------------------  +800</li>
+    <li>Ingreso paguita --------------------------  +400</li>
+    <li>Adeudo Luz/Gas -------------------------  -200</li>
+    <li>Multa por tu bien -------------------------  -600</li>
+    <li>Bizum de mi primo -------------------------  +800</li>
 </ul>
