--- a/src/app/operaciones/operaciones.component.html
+++ b/src/app/operaciones/operaciones.component.html
@@ -1,4 +1,8 @@
 <ul>
-    <li>Hacer transferencia</li>
+    <li><h1>Hacer transferencia</h1></li>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A excepturi blanditiis est modi porro, error eaque provident repudiandae neque nostrum repellat quis voluptas ducimus doloremque cupiditate nam debitis commodi. Ratione?</p>
+    <li><h1>Bizum</h1></li>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A excepturi blanditiis est modi porro, error eaque provident repudiandae neque nostrum repellat quis voluptas ducimus doloremque cupiditate nam debitis commodi. Ratione?</p>
+    <li><h1>Recibir dinero</h1></li>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, beatae? Animi fugit, ea dolorum nesciunt minima adipisci aliquam expedita atque. Quam voluptates ducimus distinctio consectetur veniam sapiente beatae enim reprehenderit.</p>
 </ul>
