--- a/src/app/productos/productos.component.html
+++ b/src/app/productos/productos.component.html
@@ -1,4 +1,5 @@
 <ul>
+    <h1>Mis Productos</h1>
     <li>Tarjeta de crédito</li>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A excepturi blanditiis est modi porro, error eaque
         provident repudiandae neque nostrum repellat quis voluptas ducimus doloremque cupiditate nam debitis commodi.
