--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <div>
 
-  <app-header></app-header>
-  <app-navbar *ngIf="cuentaElegida"></app-navbar>
+  <app-header>
+    
+  </app-header>
+  <!-- <app-navbar *ngIf="cuentaElegida"></app-navbar> -->
   <router-outlet></router-outlet>
   <app-footer></app-footer>
 
