--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,16 +7,16 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link" ng-href="">Inicio</a></li>
-          <li class="nav-item"><a class="nav-link" ng-href="">Productos</a></li>
-          <li class="nav-item"><a class="nav-link" ng-href="">OFERTA</a></li>
+          <li class="nav-item"><a class="nav-link" routerLink="/home">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link" routerLink="/products">Productos</a></li>
+          <li class="nav-item"><a class="nav-link" routerLink="/offer">OFERTA</a></li>
         </ul>
 
         <div class="navbar-nav action-buttons ml-auto">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item"><a ng-href="/login" class="btn p-2 btn-primary border-0">Acceso</a></li>
+            <li class="nav-item"><a routerLink="login" class="btn p-2 btn-primary border-0">Acceso</a></li>
             <li class="nav-item">&nbsp;</li>
-            <li class="nav-item"><a ng-href="/register" class="btn p-2 btn-primary border-0">Registrate</a></li>
+            <li class="nav-item"><a routerLink="register" class="btn p-2 btn-primary border-0">Registrate</a></li>
           </ul>
         </div>
       </div>
