--- a/src/app/hijo/hijo.component.html
+++ b/src/app/hijo/hijo.component.html
@@ -3,5 +3,6 @@
         La entrada desde el Padre es <span class="text-danger">{{entradaDelPadre}}</span>
     </h1>
     Mensaje a Papa en evento: <input type="text" [(ngModel)]="mensajeAPapaEnEvento">
-    <button (click)="realizarComunicacion(mensajeAPapaEnEvento)">enviar a Papa</button>
+    <button (click)="realizarComunicacion(mensajeAPapaEnEvento)">enviar a Papa</button><br>
+    <input type="text" [(ngModel)]="mensajeAPapa">
 </div>
