--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
 
         <div class="navbar-nav action-buttons ml-auto">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item"><a routerLink="login" class="btn p-2 btn-primary border-0">Acceso</a></li>
+            <li class="nav-item"><a routerLink="/login" class="btn p-2 btn-primary border-0">Acceso</a></li>
             <li class="nav-item">&nbsp;</li>
             <li class="nav-item"><a routerLink="register" class="btn p-2 btn-primary border-0">Registrate</a></li>
           </ul>
@@ -26,7 +26,8 @@
 
 <main>
   <article>
-    <div style="height: 300px;">
+    <div style="height: 100%;">
+      <router-outlet></router-outlet> 
     </div>
   </article>
 </main>
