--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,17 @@
-<p>Acceso</p>
+<div class="login-form">
+    <div class="form-group">
+        <label>Usuario o email</label>
+        <input type="text" class="form-control" required="required">
+    </div>
+    <div class="form-group">
+        <div class="clearfix">
+            <label>Contraseña</label>
+            <a href="#" class="float-right text-muted"></a>
+        </div>                            
+        <input type="password" class="form-control" required="required">
+        Recordame
+    </div>
+    <button class="btn btn-primary btn-block w-100" value="Login">Iniciar sessión</button>
+
+    <a href="#" class="float-right text-muted">He olvidado mi contraseña</a>
+</div>
