--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,7 +11,7 @@
         <input type="password" class="form-control" required="required">
         Recordame
     </div>
-    <button class="btn btn-primary btn-block w-100" value="Login">Iniciar sessión</button>
+    <button class="btn btn-primary btn-block w-100" value="Login">Me conecto</button>
 
     <a href="#" class="float-right text-muted">He olvidado mi contraseña</a> 
 </div>
