--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item"><a routerLink="/login" class="btn p-2 btn-primary border-0">Mi cuenta</a></li>
             <li class="nav-item">&nbsp;</li>
-            <li class="nav-item"><a routerLink="register" class="btn p-2 btn-primary border-0">Registrate</a></li>
+            <li class="nav-item"><a routerLink="/register" class="btn p-2 btn-primary border-0">Registrate</a></li>
           </ul>
         </div>
       </div>
@@ -27,7 +27,8 @@
 <main>
   <article>
     <div style="height: 100%;">
-      <router-outlet></router-outlet> 
+
+      <router-outlet></router-outlet>
     </div>
   </article>
 </main>
