--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,6 @@
 <div>
 
-  <app-header>
-    
-  </app-header>
+  <app-header></app-header>
   <router-outlet></router-outlet>
   <app-footer></app-footer>
 
