--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,1 +1,5 @@
-<p>navbar works!</p>
+<a routerLink="detalles">Detalles</a>
+<a routerLink="movimientos">Movimientos</a>
+<a routerLink="operaciones">Operaciones</a>
+<a routerLink="productos">Mis Productos</a>
+<a routerLink="cuentas">Mis cuentas</a>
