--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,1 +1,6 @@
-<p>landing works!</p>
+<div class="container bg-success">
+    <h1>Bienvenido al Banco</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+         Cumque nostrum voluptatem eveniet quia earum. Reprehenderit ab molestias tempore voluptatibus
+         , vel esse consequuntur dolor provident est perspiciatis, temporibus quae quasi! Ut.</p>
+</div>
