--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -29,7 +29,7 @@
                 <label>Clave de acceso</label>
             </div>
             <div class="recordar">
-                <a href="#">¿Olvidó su contraseña?</a>
+                <a href="#">¿Olvidó su clave?</a>
             </div>
             <button type="submit" class="btnSubmit">Entrar</button>
             <div class="loginARegisto">
