--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -8,7 +8,7 @@
     background: transparent;    
     border: 2px solid rgb(15, 156, 39);
     outline: none;
-    border-radius: 4px;
+    /* border-radius: 4px; */
     font-size: 1.1em;
     color: whitesmoke;
     font-weight: 500;
@@ -20,12 +20,13 @@
     color: green;
 }
 .contenedorLogin{
-    position: relative;
+    position: absolute;
     width: 400px;
     height: 440px;
     background: rgb(15, 156, 39, .2);
+    /* background: whitesmoke; */
     border: 2px solid rgb(15, 156, 39, .2);
-    border-radius: 10px;
+    /* border-radius: 10px; */
     backdrop-filter: blur(20px);
     box-shadow: 0 0 30px whitesmoke;
     display: flex;
@@ -61,14 +62,19 @@
     transition: .5s;
 }
 .inputCasilla input:focus~label,.inputCasilla input:valid~label{
-    top: -5px;
-    opacity: .5;
+    top: -3px;
+    opacity: 1;
+    font-size: 0.8em;
+    background-color: whitesmoke;
+    width: 180px;
+    left: 0px;
+    padding-left: 3px;
 }
 
 .inputCasilla input{
     width: 100%;
     height: 100%;
-    background: transparent;
+    background: whitesmoke;
     border: none;
     outline: none;
     font-size: 1em;
