--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,7 +5,7 @@
 <div class="contenedorLogin">
     <div class="formularioLogin">
         <h2>BANCOFO</h2>
-        <form action="#" method="post">
+        <form action="#" method="post" spellcheck="false">
             <div class="inputCasilla">
                 <span class="iconito">
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
